ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: rome.support
    http:
      paths:
      - path: /testapp
        backend:
          serviceName: frontend
          servicePort: 8080
      - path: /microservicetraceUI
        backend:
          serviceName: zipkin
          servicePort: 9411
